k8s/manifests/technitium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
spec:
  type: ClusterIP
  selector:
    app: technitium
  ports:
    - name: web
      port: 5380
      targetPort: 5380
      protocol: TCP
