k8s/manifests/technitium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: zerossl-cloudflare-dns01
  name: technitium
spec:
  ingressClassName: traefik
  rules:
    - host: dns.internal.chaldea.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium-web
                port:
                  number: 5380
  tls:
    - hosts:
        - dns.internal.chaldea.dev
      secretName: technitium-tls
